<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
              android:layout_height="match_parent" android:gravity="center_horizontal"
              android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin" tools:context=".activity.BaseLoginActivity">

    <!-- Login progress -->
    <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
                 android:layout_width="wrap_content" android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp" android:visibility="gone" />

    <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
                android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_height="wrap_content">

                <TextView
                        android:id="@+id/txt_logo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/app_name"
                        android:textColor="@color/app_primary"
                        android:textStyle="bold"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textSize="30dp"
                        android:clickable="true"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true" />

                <TextView
                        android:id="@+id/txt_descripcion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/app_decription"
                        android:textColor="@color/grey_600"
                        android:layout_below="@+id/txt_logo"
                        android:layout_alignRight="@+id/txt_logo"
                        android:layout_alignEnd="@+id/txt_logo" />
            </RelativeLayout>

            <LinearLayout
                    android:id="@+id/email_login_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="@dimen/loginactivity_logo_from_login"
                    android:weightSum="1">

                <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <AutoCompleteTextView
                            android:id="@+id/txt_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_email"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:padding="8dp"
                            android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                                                               android:layout_height="wrap_content">
                    <EditText
                            android:id="@+id/txt_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:hint="@string/prompt_password"
                            android:imeActionId="@+id/login"
                            android:imeActionLabel="@string/action_sign_in_short"
                            android:imeOptions="actionUnspecified"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:padding="8dp"
                            android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    <TextView
                            android:id="@+id/txt_forgot"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/noaccount_background"
                            android:gravity="center"
                            android:textColor="@color/grey_1000"
                            android:paddingBottom="15dp"
                            android:clickable="true"
                            android:layout_marginTop="2dp"
                            android:paddingLeft="2dp"
                            android:paddingTop="15dp"
                            android:text="@string/forgot_password"
                            android:textAppearance="?android:attr/textAppearanceSmall" />

                    <TextView
                            android:id="@+id/txt_create"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textColor="@color/grey_1000"
                            android:layout_marginTop="2dp"
                            android:background="@drawable/noaccount_background"
                            android:gravity="center"
                            android:paddingBottom="15dp"
                            android:paddingRight="2dp"
                            android:paddingTop="15dp"
                            android:text="@string/create_account"
                            android:clickable="true"
                            android:textAppearance="?android:attr/textAppearanceSmall" />
                </LinearLayout>

                <Button
                        android:id="@+id/email_sign_in_button"
                        style="?android:textAppearanceSmall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/grey_0"
                        android:layout_marginTop="2dp"
                        android:background="@drawable/login_btn"
                        android:text="@string/action_sign_in" />

                <!--     <com.google.android.gms.common.SignInButton
                         android:id="@+id/g_sign_in_button"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:padding="5dp" />
                 -->

            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</LinearLayout>
